discussion/kv_engine/173282/173282_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51715: Timeout SeqnoPersistenceRequests when no data is flushed

Prior to this change, a SeqnoPersistenceRequest would wait 'forever'
if no data is moving through the vbucket and never timeout. This is
because execution into the code managing the SeqnoPersistenceRequests
only occurs from a successful flush of an item.

This is addressed in this commit by the addition of a new task which
will run when there are SeqnoPersistenceRequests to expire. This new
task runs for persistent and ephemeral (replacing
EphemeralBucket::NotifyHighPriorityReqTask) and aims to only run when
notifications might need expiring.

The configuration is updated so that 0 is a legal value for
"seqno_persistence_timeout", enabling tests with minimal real run-time.

Change-Id: I603ad4c8f62e496d5d6bea80bc5ef4f196714989

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-08 08:29:06.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 09:11:44.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37903/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11:
error: member access into incomplete type "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16532/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:51:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16532/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:278:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16532/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45125/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15467/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17403/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18640/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6247/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19336/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26714/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6187/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
